--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Appliance Solution | Durham Repair, Service and Purchase</title>
+		<title>Appliance Solution | Durham Repair, Service and Installation</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -81,9 +81,9 @@
 										<img src="images/delivery.png" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Purchase</h2>
+										<h2>Installation</h2>
 										<div class="content">
-											<p>New or lightly loved appliances for sale.</p>
+											<p>Get your newly purchased appliance installed.</p>
 										</div>
 									</a>
 								</article>
