--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/icon.jpg" alt="" /></span><span class="title"> Appliance Solution 647-984-5529</span>
+									<span class="symbol"><img src="images/icon1.JPG" alt="" /></span><span class="title"> Appliance Solution 647-984-5529</span>
 								</a>
 
 							<!-- Nav -->
