--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 				<div class="box alt">
 					<div class="inner">
-						<h2>Brandes we Service</h2>
+						<h2>Brands we Service</h2>
 							<div class="col-12"><span class="image fit"><img src="images/popular.png" alt="" /></span>
 								
 						<header class="major">
