--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 						<p>Nothing is more unsettling than having one of your household appliances fail when you most need it. Refrigerators, ovens, stoves, and washers have become indispensable household appliances. They unquestionably assist us in saving time and energy. A broken refrigerator can lead to rotten food, while a broken washing can lead to piles of clothes. You won't have to live without any of your appliances thanks to Appliance Solution Repair. Simply give us a call at 647-984-5529, and we'll send one of our Certified Appliance Technicians over right away to make the necessary repairs!</p>
 
-						We can repair, service or install all of your major home appliances; fridge, freezer, cooktop stove, oven, dishwasher, washer, dryer and more. 
+						We can repair, service or install all of your major home appliances; fridge, freezer, cooktop stove, oven, dishwasher, washer, dryer and more. </ b>
 						
 						<h3><a href="tel:555-555-5555">Call Us Today! 647-984-5529</a></a></li></h3>
 					</section>
