--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<a href="#" class="image"><img src="images/logo-short.jpg" alt="" /></a>
 					<h1><strong>Appliance Solution</a></strong> 
 
-					<h1><strong><a href="tel:555-555-5555">Tel: 647-984-5529</a> </h1></strong>
-					<h3><i>The Solution for your Appliances</i></h3>
+					<h1><strong><a href="tel:555-555-5555">647-984-5529</a> </h1></strong>
+					<h3><i>The Solution for your Appliances!</i></h3>
 					
 				</div>
 			</header>
